# Advanced-Programming-PacMan

./: .clang-format  .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Coin.cpp  Coin.h  ConcreteFactory.cpp  ConcreteFactory.h  Doxyfil  Entity.h  Game.cpp  Game.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  Pacman.cpp  Pacman.h  README.md  Random.cpp  Random.h  Score.cpp  Score.h  Scoreboard.h  State.cpp  State.h  StateManager.cpp  StateManager.h  Stopwatch.cpp  Stopwatch.h  TODO.txt  Visitor.cpp  Wall.cpp  Wall.h  World.cpp  World.h  entity.cpp  entity.h  main.cpp  (+2 more)
.circleci/: config.yml
assets/: map.txt  map2.txt
docs/html/: _a_graph_8h_source.html  _al_resource_8hpp_source.html  _audio_2_export_8hpp_source.html  _audio_8hpp_source.html  _blend_mode_8hpp_source.html  _camera_8h.html  _camera_8h.js  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _circle_shape_8hpp_source.html  _clipboard_8hpp_source.html  _clock_8hpp_source.html  _coin_8h.html  _coin_8h.js  _coin_8h__dep__incl.map  _coin_8h__dep__incl.md5  _coin_8h__incl.map  _coin_8h__incl.md5  _coin_8h_source.html  _collectible_view_8h.html  _collectible_view_8h.js  _collectible_view_8h__dep__incl.map  _collectible_view_8h__dep__incl.md5  _collectible_view_8h__incl.map  _collectible_view_8h__incl.md5  _collectible_view_8h_source.html  _color_8hpp_source.html  _concrete_factory_8h.html  _concrete_factory_8h__dep__incl.map  _concrete_factory_8h__dep__incl.md5  _concrete_factory_8h__incl.map  _concrete_factory_8h__incl.md5  _concrete_factory_8h_source.html  _config_8hpp_source.html  _context_8hpp_source.html  _context_settings_8hpp_source.html  _convex_shape_8hpp_source.html  (+1967 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_22.js  all_23.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_12.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+78 more)
doxygen/: Doxygen documentation (HTML).lnk  Doxygen documentation (compressed HTML).lnk  Doxywizard.lnk  Examples Folder.lnk  Uninstall doxygen.lnk
entities/: Coin.cpp  Coin.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Subject.cpp  Subject.h  Wall.h
logic/: CMakeLists.txt  Observer.h  Random.cpp  Random.h  Score.cpp  Score.h  Scoreboard.cpp  Scoreboard.h  Stopwatch.cpp  Stopwatch.h  Visitor.cpp  Visitor.h  World.cpp  World.h
logic/entities/: Coin.cpp  Coin.h  Entity.cpp  Entity.h  EntityFactory.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Subject.cpp  Subject.h  Wall.cpp  Wall.h
renderer/: Camera.cpp  Camera.h  CollectibleView.cpp  CollectibleView.h  EntityView.cpp  EntityView.h  GhostView.cpp  GhostView.h  PacmanView.cpp  PacmanView.h  RenderVisitor.cpp  RenderVisitor.h  View.cpp  View.h  WallView.cpp  WallView.h  WorldView.cpp  WorldView.h
states/: FinishState.cpp  FinishState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  State.h  StateManager.cpp  StateManager.h
